# SA-GS

./: .gitignore  README.md  metrics.py  pyproject.toml  requirements.txt
sags/: _metrics_lpips.py  cli.py  config.py  evaluation.py  method.py  render.py  train.py  types.py  utils.py
sags/configs/: dfc2019.yml
sags/datasets/: __init__.py  _colmap_utils.py  _common.py  colmap.py  phototourism.py
submodules/diff-gaussian-rasterization/: CMakeLists.txt  rasterize_points.cu  rasterize_points.h
submodules/diff-gaussian-rasterization/cuda_rasterizer/: backward.cu  forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu
submodules/diff-gaussian-rasterization/diff_gaussian_rasterization/: __init__.py
